--- a/style.css
+++ b/style.css
@@ -1,25 +1,34 @@
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 50px;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
 }
-button{
-    margin-top: 16px;
-    padding: 10px;
-    width: 53vh;
-    background-color: #C2E7FF;
-    border-radius: 8px;
-    border: none;
-
-
+button {
+  margin-top: 16px;
+  padding: 10px;
+  width: 53vh;
+  background-color: #c2e7ff;
+  border-radius: 8px;
+  border: none;
 }
 
-input{
-    padding: 10px;
-    width: 50vh;
-    margin-top: 16px;
-    border-radius: 8px;
+input {
+  padding: 10px;
+  width: 50vh;
+  margin-top: 16px;
+  border-radius: 8px;
+}
 
+#generatedId {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-inline-start: auto;
+  
+}
+#generatedId li {
+    display: inline-flex;
+
+    
 }
