--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+body{
+  background-image: url(./background.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .container {
   display: flex;
   justify-content: center;
@@ -40,4 +44,8 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+.delete{
+  text-align: center;
+  cursor: pointer;
 }
