--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 }
 h1{
   text-align: center;
+  color: white;
 }
 select {
   padding: 10px;
@@ -26,6 +27,7 @@ button {
   background-color: #c2e7ff;
   border-radius: 8px;
   border: none;
+  cursor: pointer;
 }
 
 input {
